[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Items/Scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://src/Player/resources/Weapon_Firing_Particles.tres" type="Material" id=2]

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 7 )

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.797468 )
colors = PoolColorArray( 1, 1, 1, 1, 0.848649, 0.848649, 0.848649, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=6]
trail_divisor = 4
trail_color_modifier = SubResource( 8 )
flag_align_y = true
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 6.0
color = Color( 0.756863, 0.756863, 0.756863, 0.858824 )

[node name="Projectile" type="RigidBody2D"]
rotation = 3.14159
collision_layer = 4128
mass = 0.25
physics_material_override = SubResource( 3 )
gravity_scale = 2.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 0.2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.499999, -7.41082e-06 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=["non-targetable"]]
collision_layer = 32
collision_mask = 220

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Visuals" type="YSort" parent="."]

[node name="Polygon2Outer" type="Polygon2D" parent="Visuals"]
rotation = -1.5708
color = Color( 0.498039, 0.27451, 0.0627451, 1 )
polygon = PoolVector2Array( -3.9999, -17, 4.0001, -17, 8.00004, -6.99995, 7.99995, 8.00005, -8.00005, 7.99995, -7.99996, -7.00005 )

[node name="Polygon2Inner" type="Polygon2D" parent="Visuals"]
rotation = -1.5708
color = Color( 0.839216, 0.470588, 0.176471, 1 )
polygon = PoolVector2Array( -3, -15, 3, -15, 6, -7, 6, 6, -6, 6, -6, -7 )

[node name="Despawn_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Firing_Particles" type="Particles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 32
lifetime = 1.5
one_shot = true
speed_scale = 2.5
explosiveness = 1.0
local_coords = false
draw_order = 1
process_material = ExtResource( 2 )

[node name="Tracer" type="Particles2D" parent="."]
position = Vector2( 8, 2.02815e-05 )
amount = 128
lifetime = 0.3
visibility_rect = Rect2( -10000, -10000, 20000, 20000 )
local_coords = false
draw_order = 1
process_material = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Despawn_Timer" to="." method="_on_Despawn_Timer_timeout"]
